--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:h2:file:./db/blogdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=password
-spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
  
 # H2 Console Configuration
 spring.h2.console.enabled=true
@@ -17,4 +17,9 @@ spring.h2.console.settings.web-allow-others=false
  
 # Hibernate DDL Auto Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
+
+
+# Enable lazy loading
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 
