--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 			<version>3.0.4.RELEASE</version>
 		</dependency>
 
+		<!-- add the dependency for spring starter validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
