--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,16 @@ spring.h2.console.settings.web-allow-others=false
 # Hibernate DDL Auto Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
 
+# Thymeleaf Configuration
+thymeleaf.version=3.0.12.RELEASE
+thymeleaf-layout-dialect.version=2.5.0
+
+
+
 
 # Enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+photo.prefix=/resources/static/images/photo.png
 
 
