--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.18.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
