--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,20 @@ thymeleaf-layout-dialect.version=2.5.0
 # Enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-photo.prefix=/resources/static/images/photo.png
+photo.prefix=/images/photo.png
+
+
+password.token.reset.timeout.minutes=600
+
+
+#Email settings 
+
+spring.config.import=optional:secret.properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.smtp.ssl.trust=smtp.google.com
+mail.transport.protocol=smtp
 
 
