--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,7 @@ photo.prefix=/images/photo.png
 
 
 password.token.reset.timeout.minutes=600
+site.domain=http://localhost:8080/
 
 
 #Email settings 
@@ -39,9 +40,10 @@ password.token.reset.timeout.minutes=600
 spring.config.import=optional:secret.properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+spring.mail.properties.mail.debug=true;
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.smtp.ssl.trust=smtp.google.com
+spring.mail.smtp.ssl.trust=smtp.gmail.com
 mail.transport.protocol=smtp
 
 
